crates/zendriver-mcp/tests/snapshots/schema_snapshots__navigation_history_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::navigation::HistoryInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: HistoryInput
description: "Arg block for `browser_back` / `_forward` / `_reload`."
type: object
properties:
  return_snapshot:
    description: "When `true`, include the trimmed page HTML in the response."
    type: boolean
    default: false
additionalProperties: false
