crates/zendriver-mcp/tests/snapshots/schema_snapshots__navigation_idle_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::navigation::IdleInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: IdleInput
description: "Arg block for `browser_wait_for_idle`."
type: object
properties:
  max_inflight_age_ms:
    description: "Ignore requests in flight longer than this many milliseconds when\njudging idle — treat them as stuck/background (a hung beacon, long-poll,\nSSE stream, …) so idle can resolve even while one is still open. Omit to\nwait for every request to complete (the default)."
    type:
      - integer
      - "null"
    format: uint64
    default: ~
    minimum: 0
  strict:
    description: "Abort the wait with an error if the underlying event stream loses\ndelivery continuity (a lagging subscriber, a reconnect, or a dropped\nconnection) while waiting. Default `false`: a delivery gap is\ntolerated and the wait still resolves on a best-effort basis."
    type: boolean
    default: false
  timeout_ms:
    description: "Outer timeout in milliseconds (default: 5000)."
    type: integer
    format: uint64
    default: 5000
    minimum: 0
additionalProperties: false
