crates/zendriver-mcp/tests/snapshots/schema_snapshots__navigation_ready_state_arg.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::navigation::ReadyStateArg)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: ReadyStateArg
description: "Document-ready milestone `browser_wait_for_load` can target."
oneOf:
  - description: "`document.readyState === \"interactive\"` — DOM parsed, sub-resources\nmay still be loading."
    type: string
    const: interactive
  - description: "`document.readyState === \"complete\"` — the `load` event has fired."
    type: string
    const: complete
